[tool.poetry]
name = "cuddly-poetry-python"
version = "0.1.0"
description = "Guide to Poetry-managed Python project"
authors = ["Admin <admin@mailinh.cc>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
